fixed the overlapping with footer issue, footer scroll issue fixed,user profile image fixed,ErrorPage image aligned

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,8 @@ body, html, #root {
 
 :root {
   max-width: 100vw;
+  height: 100vh;
   text-align: center;
-  margin-bottom: 4rem;
   --primaryBlue: #27BFD3FF ;
   --secondaryBlue: #209CD8FF;
   --orange : #EC8C70FF;
@@ -20,6 +20,7 @@ body, html, #root {
   height: 100%; 
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
 
 .rsc-header {
