--- a/src/styles/NewTrip.module.css
+++ b/src/styles/NewTrip.module.css
@@ -6,5 +6,5 @@
 }
 
 .pageCtn {
-  min-height: 84%;
+  margin-bottom: 20px;
 }
