--- a/src/styles/NotFound.css
+++ b/src/styles/NotFound.css
@@ -1,5 +1,5 @@
 .NotFound img {
-  height: 50vh;
+  height: 40vh;
   object-fit: contain;
 }
 
